packages/next-swc/crates/styled_jsx/tests/errors/nested-style-tags/output.js
import _JSXStyle from "next/dist/shared/lib/styled-jsx";
const Component = ()=><>
    <header >
      <Comp >
        <_JSXStyle id={styles.__hash}>{styles}</_JSXStyle>
        <_JSXStyle id={"b3e1b6a7c9b96113"}>{""}</_JSXStyle>
      </Comp>
      <p className={"jsx-b3e1b6a7c9b96113"}><_JSXStyle id={"b3e1b6a7c9b96113"}>{""}</_JSXStyle></p>
    </header>
    <div className={"jsx-b3e1b6a7c9b96113"}>
      <h1 className={"jsx-b3e1b6a7c9b96113"}>
        Welcome!
        <style jsx>{``}</style>
      </h1>
      <_JSXStyle id={"b3e1b6a7c9b96113"}>{""}</_JSXStyle>
    </div>
    <div className={"jsx-b3e1b6a7c9b96113"}>
      <_JSXStyle id={"b3e1b6a7c9b96113"}>{""}</_JSXStyle>
      <h1 className={"jsx-b3e1b6a7c9b96113"}>
        Hello world!
        <style jsx global>{``}</style>
      </h1>
    </div>
    <div className={"jsx-b3e1b6a7c9b96113"}>
      <>
        <style jsx>{styles}</style>
      </>
      <_JSXStyle id={"b3e1b6a7c9b96113"}>{""}</_JSXStyle>
    </div>
  </>
;
